[package]
name = "ansa"
version = "0.0.1"
edition = "2021"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
description = "Disruptor pattern in rust"

[dependencies]
crossbeam-utils = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.7.0"
crossbeam-channel = "0.5.14"
disruptor = "3.6.1"
rand = { version = "0.9.0", features = ["small_rng"] }

[features]
cache-padded = ["crossbeam-utils"]

[profile.profiling]
inherits = "release"
panic = "abort"
debug = true

[[bench]]
name = "spsc"
harness = false
required-features = ["cache-padded"]

[[bench]]
name = "mpsc"
harness = false
required-features = ["cache-padded"]

[[bench]]
name = "count_500M"
harness = false
required-features = ["cache-padded"]
